# langserve

./: .clabot  .gitignore  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _lint.yml  _pydantic_compatibility.yml  _release.yml  _test.yml  _test_release.yml  langserve_ci.yml  langserve_release.yml  langserve_test_release.yml
examples/agent/: client.ipynb  server.py
examples/agent_custom_streaming/: client.ipynb  server.py
examples/agent_with_history/: client.ipynb  server.py
examples/agents_custom_streaming/: client.ipynb  server.py
examples/api_handler_examples/: server.py
examples/api_handler_simple_server/: server.py
examples/astra_db_RAG/: .env.template  README.md  client.py  requirements.txt  server.py  setup.py
examples/auth/api_handler/: client.ipynb  server.py
examples/auth/global_deps/: server.py
examples/auth/path_dependencies/: server.py
examples/auth/per_req_config_modifier/: client.ipynb  server.py
examples/chain/: client.ipynb  server.py
examples/chat_app/: server.py
examples/chat_playground/: server.py
examples/chat_playground/legacy_input/: server.py
examples/chat_with_persistence/: client.ipynb  server.py
examples/chat_with_persistence_and_user/: client.ipynb  server.py
examples/configurable_agent_executor/: client.ipynb  server.py
examples/configurable_chain/: client.ipynb  server.py
examples/configurable_retrieval/: client.ipynb  server.py
examples/conversational_retrieval_chain/: client.ipynb  server.py
examples/custom_events/: server.py
examples/file_processing/: client.ipynb  server.py
examples/llm/: client.ipynb  server.py
examples/local_llm/: client.ipynb  server.py
examples/multiple_servers/: client_server.py  main_server.py
examples/passthrough_dict/: client.ipynb  server.py
examples/retrieval/: client.ipynb  server.py
examples/router/: server.py
examples/widgets/: server.py
examples/widgets/chat/message_list/: server.py
examples/widgets/chat/tuples/: server.py
examples/widgets/chat_interface/: server.py
langserve/: .python-version  __init__.py  _pydantic.py  api_handler.py  callbacks.py  chat_playground.py  client.py  dns_aid.py  event_serialization.py  langsmith_webhook.py  lzstring.py  packages.py  playground.py  pydantic.py  pydantic_v1.py  pyproject.toml  schema.py  scripts.py  serialization.py  server.py  server_sent_events.py  storage.py  test_callbacks.py  validation.py
langserve-playground/: vite.config.ts
langserve-playground/src/: App.tsx  index.css  useSchemas.tsx  useStreamLog.tsx
langserve/chat/: .gitignore  package.json  tailwind.config.js  vite.config.ts
langserve/chat/src/: App.css  App.tsx  useSchemas.tsx  useStreamLog.tsx
langserve/chat/src/components/: ChatMessage.tsx  ChatWindow.tsx  ShareDialog.tsx
langserve/chat/src/components/feedback/: CorrectnessFeedback.tsx
langserve/chat/src/utils/: messages.ts  url.ts
langserve/chat_playground/: index.html  package.json  tailwind.config.js  vite.config.ts
langserve/chat_playground/src/: App.css  App.tsx  types.tsx  useSchemas.tsx  useStreamLog.tsx
langserve/chat_playground/src/components/: AutosizeTextarea.tsx  ChatMessage.tsx  ChatWindow.tsx  ShareDialog.tsx
langserve/chat_playground/src/components/feedback/: CorrectnessFeedback.tsx
langserve/chat_playground/src/utils/: path.ts  schema.ts  url.ts
langserve/examples/retrieval/: Untitled.ipynb
langserve/playground/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
langserve/playground/src/: App.css  App.tsx  main.tsx  renderers.tsx  types.tsx  useSchemas.tsx  useStreamCallback.tsx  useStreamLog.tsx
langserve/playground/src/components/: AutosizeTextarea.tsx  ChatMessageInput.tsx  ChatMessageRenderer.tsx  ChatMessageTuplesControlRenderer.tsx  ChatMessagesControlRenderer.tsx  CustomAnyOfRenderer.tsx  CustomArrayControlRenderer.tsx  CustomTextAreaCell.tsx  DeleteDialog.tsx  FileBase64Tester.tsx  IntermediateSteps.tsx  JsonTextAreaCell.tsx  MaterialTableControl.tsx  NoBorderTableCell.tsx  ShareDialog.tsx  StreamOutput.tsx  SubmitButton.tsx  TableToolbar.tsx  ValidationIcon.tsx
langserve/playground/src/components/CustomArrayControlRenderer/: DeleteDialog.tsx  MaterialTableControl.tsx  NoBorderTableCell.tsx  TableToolbar.tsx
langserve/playground/src/components/feedback/: CorrectnessFeedback.tsx
langserve/playground/src/sections/: SectionConfigure.tsx  SectionInputs.tsx
langserve/playground/src/types/: json-schema-defaults.d.ts
langserve/playground/src/utils/: defaults.ts  path.ts  schema.ts  simplifySchema.ts  url.ts
libs/langserve-playground/: README.md  package.json  tsup.config.ts
libs/langserve-playground/src/: index.tsx
tests/unit_tests/: test_api_playground.py  test_callbacks.py  test_dns_aid.py  test_encoders.py  test_langsmith_webhook.py  test_lzstring.py  test_playground.py  test_serialization.py  test_server_client.py  test_streaming_utils.py  test_validation.py  test_version.py  utils.py
tests/unit_tests/utils/: llms.py  serde.py  stubs.py  test_fake_chat_model.py  tracer.py
